# pigeon-service-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_dir}}/: .bumpversion.toml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_dir}}/.github/workflows/: main.yaml
{{cookiecutter.project_dir}}/test/: test_example.py
{{cookiecutter.project_dir}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: main.yaml
{{cookiecutter.project_slug}}/test/: test_example.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
