[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    {name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}"}
]
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
dynamic= ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.__main__:main"
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mock",
]
dev = [
  "bump-my-version",
]
